adding end of module

--- a/Movies_ETL.ipynb
+++ b/Movies_ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "id": "d43d17bc",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,10 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import db_password\n",
+    "import time"
    ]
   },
   {
@@ -1863,8 +1866,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/johannahdelunas/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "/var/folders/3y/sg53g9yx2l152vz_g8dwv8p00000gn/T/ipykernel_1458/3746335845.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n"
      ]
     },
     {
@@ -2427,8 +2430,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/johannahdelunas/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "/var/folders/3y/sg53g9yx2l152vz_g8dwv8p00000gn/T/ipykernel_1458/3356424145.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
+      "  ratings.info(null_counts=True)\n"
      ]
     }
    ],
@@ -4404,7 +4407,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2f67f8c2",
+   "id": "72bf96ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4429,7 +4432,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "94dbf097",
+   "id": "add7c1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4441,8 +4444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "cd32a299",
+   "execution_count": 78,
+   "id": "402a93d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4451,8 +4454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "da73b1a9",
+   "execution_count": 79,
+   "id": "3a54a013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4461,8 +4464,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "966ec7e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "fc869c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "0b1e5dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "9b035c97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done.) 19.279939889907837 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done.) 38.44828414916992 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done.) 57.66655492782593 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done.) 77.10358905792236 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done.) 96.00832915306091 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done.) 115.09860181808472 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done.) 134.11478400230408 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done.) 153.50907397270203 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done.) 172.5963909626007 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done.) 191.81026816368103 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done.) 211.0787491798401 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done.) 230.24148178100586 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done.) 249.14643597602844 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done.) 268.55851888656616 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done.) 288.0188310146332 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done.) 307.34809589385986 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done.) 326.7232940196991 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done.) 345.5694189071655 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done.) 364.50560307502747 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done.) 383.7239761352539 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done.) 402.9695930480957 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done.) 422.38782811164856 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done.) 441.5657629966736 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done.) 460.444876909256 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done.) 479.82334089279175 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done.) 498.6679699420929 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done.) 499.1280732154846 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "for data in pd.read_csv(f'files_to_ignore/ratings.csv', chunksize=1000000):\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    rows_imported += len(data)\n",
+    "    \n",
+    "    # add elasped time to final print out\n",
+    "    print(f'Done.) {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a9156153",
+   "id": "6028620e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4484,7 +4581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
