adding final challenge

--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -302,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -322,7 +324,7 @@
       "999999   10183      419     2.0   833461026\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 0 to 1000000...Done. 22.04093885421753 total seconds elapsed\n",
+      "importing rows 0 to 1000000...Done. 22.095134973526 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "1000000   10183      420     3.0   833459603\n",
       "1000001   10183      421     3.0   833460615\n",
@@ -337,7 +339,7 @@
       "1999999   20808    71282     3.0  1258756325\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 1000000 to 2000000...Done. 43.88283896446228 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 44.84183382987976 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "2000000   20808    71535     4.5  1258757070\n",
       "2000001   20808    73017     4.5  1284931448\n",
@@ -352,7 +354,7 @@
       "2999999   31332     1197     4.0   974205170\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 2000000 to 3000000...Done. 66.41871309280396 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 67.02524781227112 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "3000000   31332     1210     4.0   974205261\n",
       "3000001   31332     1821     3.0   974205170\n",
@@ -367,7 +369,7 @@
       "3999999   41578     3300     4.0  1134007927\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 3000000 to 4000000...Done. 88.72915387153625 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 89.00155591964722 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "4000000   41578     3354     4.0  1134007524\n",
       "4000001   41578     3421     4.5  1134008066\n",
@@ -382,7 +384,7 @@
       "4999999   51433     1372     3.0  1394863281\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 4000000 to 5000000...Done. 111.04452586174011 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 112.30966806411743 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "5000000   51433     1376     4.0  1394863191\n",
       "5000001   51433     1408     5.0  1394863231\n",
@@ -397,7 +399,7 @@
       "5999999   61768     3869     3.5  1438075491\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 5000000 to 6000000...Done. 133.83629179000854 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 135.14879512786865 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "6000000   61768     3967     4.0  1438075492\n",
       "6000001   61768     3977     3.0  1435693148\n",
@@ -412,7 +414,7 @@
       "6999999   72206      893     3.0   859544422\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 6000000 to 7000000...Done. 155.68338680267334 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 158.86415195465088 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "7000000   72206      896     5.0   859544376\n",
       "7000001   72206      897     4.0   859546225\n",
@@ -427,7 +429,7 @@
       "7999999   82484     5548     3.0  1112390553\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 7000000 to 8000000...Done. 177.80919790267944 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 181.72598505020142 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "8000000   82484     5553     2.5  1112397875\n",
       "8000001   82484     5568     3.0  1119881317\n",
@@ -442,7 +444,7 @@
       "8999999   92883     1090     2.5  1125286782\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 8000000 to 9000000...Done. 200.1746039390564 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 204.32242894172668 total seconds elapsed\n",
       "         userId  movieId  rating   timestamp\n",
       "9000000   92883     1095     3.5  1125293103\n",
       "9000001   92883     1097     4.5  1125293198\n",
@@ -457,7 +459,7 @@
       "9999999  103170      912     3.0  1253456512\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 9000000 to 10000000...Done. 222.81040287017822 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 227.15681290626526 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "10000000  103170      924     3.0  1253455601\n",
       "10000001  103170      969     3.0  1253454177\n",
@@ -472,7 +474,7 @@
       "10999999  113750      745     4.5  1422899397\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 10000000 to 11000000...Done. 245.3327977657318 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 251.16730499267578 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "11000000  113750      904     1.0  1484603435\n",
       "11000001  113750      912     2.0  1484603437\n",
@@ -487,7 +489,7 @@
       "11999999  124380     2643     1.5  1196785847\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 11000000 to 12000000...Done. 267.38792085647583 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 284.8329999446869 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "12000000  124380     2762     4.0  1196787497\n",
       "12000001  124380     3000     4.5  1196787117\n",
@@ -508,7 +510,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 12000000 to 13000000...Done. 289.2306559085846 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 307.0687630176544 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "13000000  134996    32587     3.0  1448423558\n",
       "13000001  134996    33679     3.5  1378169508\n",
@@ -523,7 +525,7 @@
       "13999999  145489    60126     3.5  1230264604\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 13000000 to 14000000...Done. 311.62805700302124 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 329.3666489124298 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "14000000  145489    60647     3.0  1230166514\n",
       "14000001  145489    60684     4.0  1246980780\n",
@@ -538,7 +540,7 @@
       "14999999  156028     1894     4.0  1011740037\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 14000000 to 15000000...Done. 334.0987136363983 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 352.74185276031494 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "15000000  156028     1918     3.0  1011739767\n",
       "15000001  156028     1927     2.0  1011572669\n",
@@ -553,7 +555,7 @@
       "15999999  166560      296     4.5  1232449370\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 15000000 to 16000000...Done. 356.6843328475952 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 376.02832674980164 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "16000000  166560      344     4.0  1232776647\n",
       "16000001  166560      356     4.5  1232449386\n",
@@ -568,7 +570,7 @@
       "16999999  176628    26528     4.5  1436840284\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 16000000 to 17000000...Done. 378.7970058917999 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 398.73977279663086 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "17000000  176628    27808     3.0  1437274867\n",
       "17000001  176628    33679     4.5  1436671978\n",
@@ -583,7 +585,7 @@
       "17999999  186925      648     4.0   949280155\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 17000000 to 18000000...Done. 400.7992298603058 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 421.4254460334778 total seconds elapsed\n",
       "          userId  movieId  rating  timestamp\n",
       "18000000  186925      695     2.0  949280155\n",
       "18000001  186925      708     3.0  949169240\n",
@@ -598,7 +600,7 @@
       "18999999  197286      235     3.0  862512210\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 18000000 to 19000000...Done. 423.20318269729614 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 444.93748593330383 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "19000000  197286      242     4.0   862511832\n",
       "19000001  197286      247     3.0   862511619\n",
@@ -613,7 +615,7 @@
       "19999999  207965    69757     4.0  1324774485\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 19000000 to 20000000...Done. 445.17375469207764 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 467.4917938709259 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "20000000  207965    89864     4.0  1324774428\n",
       "20000001  207966       34     5.0   916502599\n",
@@ -628,7 +630,7 @@
       "20999999  218237     4226     4.0  1462585028\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 20000000 to 21000000...Done. 467.03785395622253 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 490.39437985420227 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "21000000  218237     4262     3.0  1462582989\n",
       "21000001  218237     4306     3.5  1462582618\n",
@@ -643,7 +645,7 @@
       "21999999  228520     1313     2.0   978744714\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 21000000 to 22000000...Done. 489.00866770744324 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 512.7759158611298 total seconds elapsed\n",
       "          userId  movieId  rating  timestamp\n",
       "22000000  228520     1370     3.0  978744201\n",
       "22000001  228520     1372     5.0  978744317\n",
@@ -658,7 +660,7 @@
       "22999999  238867     3508     4.0  986682346\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 22000000 to 23000000...Done. 511.053484916687 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 534.9893469810486 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "23000000  238867     3510     5.0   986683036\n",
       "23000001  238867     3527     5.0   986684441\n",
@@ -673,7 +675,7 @@
       "23999999  249182    97921     3.5  1460518563\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 23000000 to 24000000...Done. 532.3416550159454 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 557.2956421375275 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "24000000  249182    97923     3.5  1460518555\n",
       "24000001  249182    97938     4.0  1461878500\n",
@@ -688,7 +690,7 @@
       "24999999  260079      574     3.0   963105272\n",
       "\n",
       "[1000000 rows x 4 columns]\n",
-      "importing rows 24000000 to 25000000...Done. 554.7401037216187 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 580.2857480049133 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "25000000  260079      585     3.0   963105510\n",
       "25000001  260079      586     2.0   970354283\n",
@@ -709,7 +711,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 25000000 to 26000000...Done. 577.175993680954 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 602.3598818778992 total seconds elapsed\n",
       "          userId  movieId  rating   timestamp\n",
       "26000000  270634   133203     4.0  1483942604\n",
       "26000001  270634   133205     4.0  1483942601\n",
@@ -724,7 +726,7 @@
       "26024288  270896    71878     2.0  1257031858\n",
       "\n",
       "[24289 rows x 4 columns]\n",
-      "importing rows 26000000 to 26024289...Done. 577.7871627807617 total seconds elapsed\n"
+      "importing rows 26000000 to 26024289...Done. 602.8307259082794 total seconds elapsed\n"
      ]
     }
    ],
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +779,7 @@
        "'Files_to_ignore/movies_metadata.csv'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,12 +791,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Files_to_ignore/ratings.csv'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 15. Check the movies_df DataFrame. \n",
-    "movies_df.head()"
+    "movies_df"
    ]
   },
   {
