--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -78,7 +78,7 @@
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load():\n",
+    "def extract_transform_load(wiki_file, kaggle_file, ratings_file):\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
     "    ratings = pd.read_csv(ratings_file)\n",
@@ -288,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
