--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -119,7 +119,7 @@
     "    \n",
     "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
     "    box_office[box_office.map(lambda x: type(x) != str)]\n",
-    "\n",
+    "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    # 10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
     "    form_one = r'\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on'\n",
     "    \n",
